Fix editing training sheet with mutable lists